--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --release
-    - name: Run tests
+    - name: Run Tests
       run: cargo test --release
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2.2.3
+      with:
+        # Artifact name
+        name: rust-web
+        path: target/release/rust-web
