--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
+      with:
+        clean: false
     - name: Build
       run: cargo build --release
       
@@ -21,6 +23,8 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
+      with:
+        clean: false
     - name: Run Tests
       run: cargo test --release
       
