--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,12 +10,16 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  checkout:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
       with:
         clean: false
+
+  build:
+    runs-on: self-hosted
+    steps:
     - name: Build
       run: cargo build --release --verbose
       
@@ -23,9 +27,6 @@ jobs:
     runs-on: self-hosted
     needs: build
     steps:
-    - uses: actions/checkout@v2
-      with:
-        clean: false
     - name: Run Tests
       run: cargo test --release --verbose
       
