--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,7 @@ jobs:
 
   build:
     runs-on: self-hosted
+    needs: checkout
     steps:
     - name: Build
       run: cargo build --release --verbose
