--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,44 +10,33 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  checkout:
-    runs-on: self-hosted
+  CI:
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
       with:
         clean: false
-
-  build:
-    runs-on: self-hosted
-    needs: checkout
-    steps:
     - name: Build
       run: cargo build --release --verbose
-      
-  test:
-    runs-on: self-hosted
-    needs: build
-    steps:
     - name: Run Tests
       run: cargo test --release --verbose
-      
-  artifact:
-    runs-on: self-hosted
-    needs: test
-    steps:  
     - name: Upload Artifact
       uses: actions/upload-artifact@v2.2.3
       with:
         name: rust-web
         path: target/release/rust-web
-            
-  deploy:
+        
+  CD:
     runs-on: self-hosted
-    needs: test
+    needs: CI
     steps:  
     - name: Stop Service
       run: service web stop
-    - name: Copy
-      run: cp target/release/rust-web /usr/local/app
+    - name: Download Artifact
+      uses: actions/download-artifact@v2.0.9
+      with:
+        name: rust-web
+        path: /usr/local/app
     - name: Start Service
       run: service web start
